--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <script type="module">
     // Import the functions you need from the Firebase SDKs
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
@@ -2872,4 +2873,5 @@ Modifier(s): ${currentScrubberScenarioData.presentedClaim.modifier}
     </script>
 </body>
 </html>
+
 
